--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
-    margin: 20px;
-    background-color: #006bb6; 
+    min-height: 100%;
+    background-color: lightblue;
+}
+html {
+    height: 100%;
 }
 p {
     color: white;
@@ -53,45 +56,59 @@ img {
     vertical-align: top;
     margin: auto;
 }
-
-
-
-
-#container {
-    width: 40%;
-    margin: auto;
-    border: 3px solid rgb(145, 0, 0);
-    border-top: 10px solid purple;
-    padding: 500px;
+#body-class {
+    margin:5px;
+    background-image: url(../html-css-practice/images/background-three.jpg);
 }
-#about-star-wars {
-    margin-left: -47%;
-    margin-top: -48%;
-    margin-right: 110%;
-    outline: solid red;
-    box-sizing: border-box;
-    padding: 5px;
+
+
+
+#new-hope-img {
+    width: auto;
+    height: auto; 
+}
+#star-wars-description {
+    display: inline-block;
+    margin-left: 2%;
+    margin-top: 0%;
+    vertical-align: top;
 }
 #about-span {
     color: #ed174c;
     text-shadow: 1px 1px black;
 }
+
+
+
+#container {
+    position: relative;
+    border: 3px solid #ed174c;
+}
 #official-info {
-    margin-left: -9%;
-    margin-top: -23.6%;;
-    outline: solid red;
-    box-sizing: border-box;
-    width: 50%;
-    padding: 5px;
+  position: absolute;
+  top: 20px;
+  left: 0;
+  width: 700px;
+  height: 550px;
+  border: 3px solid #ed174c;
 }
-#new-hope-img {
-    width: 270px;
-    height: 270px;
-    display: inline-block;
+#star-wars-history {
+    position: absolute;
+    top: 20px;
+    right: 0;
+    width: 700px;
+    height: 550px;
+    border: 3px solid #ed174c;
 }
-#star-wars-description {
-    display: inline-block;
-    margin-left: 8px;
-    margin-top: 0%;
-    vertical-align: top;
+#best-characters {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    border: 3px solid #ed174c;
+    width: 700px;
+    height: 550px;
+    top: 20px;
 }
