--- a/style.css
+++ b/style.css
@@ -14,54 +14,19 @@ h1, h2 {
     color: white;
     text-shadow: 1px 1px #ed174c; 
 }
-ul {
+ul, ol {
     font-size: 22px;
+    color: white;
 }
 img {
     width: 430px;
     margin: auto;
 }
 
-
-
-#windu {
-    color: purple;
-    text-shadow: 1px 1px black;
-}
-#yoda {
-    color: green;
-    text-shadow: 1px 1px black;
-}
-#vader {
-    color: red;
-    text-shadow: 1px 1px black;
-}
-
-
-
-#border-layout {
-    margin-left: 10px;
-    width: 20%;
-    padding: 25px;
-    border: 2px solid #ed174c;
-    display: inline-block;
-    box-sizing: border-box;
-}
-#border-layout-two {
-    width: 20%;
-    padding: 25px;
-    border: 2px solid #ed174c;
-    display: inline-block;
-    box-sizing: border-box;
-    vertical-align: top;
-    margin: auto;
-}
 #body-class {
     margin:5px;
     background-image: url(../html-css-practice/images/background-three.jpg);
 }
-
-
 
 #new-hope-img {
     width: auto;
@@ -69,7 +34,7 @@ img {
 }
 #star-wars-description {
     display: inline-block;
-    margin-left: 2%;
+    margin-left: 1%;
     margin-top: 0%;
     vertical-align: top;
 }
@@ -78,37 +43,171 @@ img {
     text-shadow: 1px 1px black;
 }
 
-
-
 #container {
     position: relative;
     border: 3px solid #ed174c;
 }
 #official-info {
-  position: absolute;
-  top: 20px;
-  left: 0;
-  width: 700px;
-  height: 550px;
-  border: 3px solid #ed174c;
+  position:fixed;
+  top: 2%;
+  left: 1;
+  width: 40%;
+  height: 40%;
 }
 #star-wars-history {
-    position: absolute;
-    top: 20px;
+    position: fixed;
+    top: 2%;
     right: 0;
-    width: 700px;
-    height: 550px;
-    border: 3px solid #ed174c;
+    width: 58%;
+    height: 40%;
 }
 #best-characters {
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    text-align: center;
-    border: 3px solid #ed174c;
-    width: 700px;
-    height: 550px;
-    top: 20px;
+    position: fixed;
+    bottom: 0;
+    left: 1;
+    top: 45%;
+    width: 100%;
+    height: 53%;
 }
+
+
+
+
+
+
+
+
+
+
+
+.flex-container {
+    background: lightgreen;
+    padding: 12px;
+    border: 4px solid blue;
+    gap: 8px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    list-style: none;
+}
+.flex-item-two {
+    background: tomato;
+    padding: 5px;
+    width: 200px;
+    height: 150px;
+    margin-top:10px;
+    line-height: 150px;
+    color:white;
+    font-weight:bold;
+    font-size: 20px;
+    text-align: left;
+    border: 1px solid black;
+    box-sizing: border-box;
+}
+.wrapper {
+    display: flex;  
+    flex-flow: row wrap;
+    font-weight: bold;
+    text-align: center; 
+    outline: 4px solid blue;
+    margin-top: 25px;
+  }
+  .wrapper > * {
+    padding: 10px;
+    flex: 1 100%;
+  }
+  
+  .header {
+    background: tomato;
+  }
+  
+  .footer {
+    background: lightgreen;
+  }
+  
+  .main {
+    text-align: left;
+    background: deepskyblue;
+  }
+
+  .main-two {
+    text-align: left;
+    background: deepskyblue;
+  }
+  
+  .aside-1 {
+    background: gold;
+  }
+  
+  .aside-2 {
+    background: hotpink;
+  }
+  @media all and (min-width: 600px) {
+    .aside { flex: 1 0 0; }
+  }
+  
+  @media all and (min-width: 800px) {
+    .main    { flex: 3 0px; }
+    .aside-1 { order: 1; } 
+    .main    { order: 2; }
+    .aside-2 { order: 3; }
+    .footer  { order: 4; }
+  }
+  
+  body {
+    padding: 2em; 
+  }
+
+
+
+  .wrapper-two {
+    display: flex;
+    flex-flow: row wrap;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 25px;
+    border: 4px solid blue;
+  }
+
+  .wrapper-two > * {
+    padding: 10px;
+    flex: 1 100%;
+  }
+
+  .aside-two {
+    background-color: grey;
+    outline: 1px solid black;
+  }
+
+  .aside-three {
+    background-color: grey;
+    outline: 1px solid black;
+  }
+
+  .article-two {
+    background-color: darksalmon;
+    outline: 1px solid black;
+    text-align: left;
+  }
+
+  .heading-two {
+    background-color: darkgray;
+    outline: 1px solid black;
+  }
+
+  .footer-two {
+    background-color: silver;
+    outline: 1px solid black;
+  }
+
+  @media all and (min-width: 600px) {
+    .aside-two { flex: 1 0 0; }
+  }
+
+  @media all and (min-width: 800px) {
+    .article-two { flex: 3 0px; }
+    .aside-two {order: 1; }
+    .article-two {order: 2; }
+    .aside-three {order: 3; }
+    .footer {order: 4; }
+  }
