--- a/css-practice/css-functions/css-functions.css
+++ b/css-practice/css-functions/css-functions.css
@@ -9,6 +9,7 @@
     background: gray;
     height: 100vh;
     color: white;
+   
 }
 
 .header {
@@ -25,3 +26,24 @@
     height: var(--footer);
     background-color: darkgrey;
 }
+
+#container {
+    display: flex;
+    box-sizing: border-box;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 6px solid black;
+    resize: both;
+    overflow: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#iconHolder {
+    width: min(150px, 100%);
+    height: min(150px, 100%);
+    box-sizing: border-box;
+    border: 6px solid blue;
+}
+/* if there are 150px available to the image, it will take up 150px. If not, it will switch to 100% of the parents width.  */
