--- a/form-basics/speaker-submission.css
+++ b/form-basics/speaker-submission.css
@@ -125,6 +125,37 @@ body {
     margin-bottom: 30px;
 }
 
+.form-row .checkbox-label {
+    margin-bottom: 0;
+}
+
+.form-row input[type='checkbox'] {
+    margin-right: 5px;
+}
+
+.form-row button {
+    font-size: 16px;
+    font-weight: bold;
+
+    color: #FFFFFF;
+    background-color: #5995DA;
+
+    border: none;
+    border-radius: 3px;
+
+    padding: 10px 40px;
+    cursor: pointer;
+}
+
+.form-row button:hover { 
+    background-color: #76AEED;
+}
+
+.form-row button:active {
+    background-color: #407fc7;
+}
+
+
 @media only screen and (min-width: 700px) {
     .speaker-form-header,
     .speaker-form {
@@ -148,5 +179,14 @@ body {
         width: 120px;
         margin-top: 7px;
         padding-right: 20px;
+    }
+
+    .form-row .checkbox-label {
+        margin-left: 115px;
+        width: auto;
+    }
+
+    .form-row button {
+        margin-left: 120px;
     }
 }
