--- a/grid-practice/grid-test.css
+++ b/grid-practice/grid-test.css
@@ -36,11 +36,42 @@
     grid-column-start: 3;
     grid-column-end: 6;
     grid-row-start: 2;
-    grid-row-end: 6;
+    grid-row-end: span 6;
 }
 
 #bathroom {
     grid-row-start: 2;
-    grid-row-end: 6;
+    grid-row-end: 5;
    
+}
+
+.grid-area {
+    display: grid;
+    grid-template-columns: 50px 50px 50px 50px;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "header header header header"
+    "main main . sidebar"
+    "footer footer footer footer";
+    margin-top: 20px;
+}
+
+.grid-area > div {
+    border: 1px solid black;
+}
+
+#one {
+grid-area: header;
+}
+
+#two {
+grid-area: main;
+}
+
+#three {
+grid-area: sidebar;
+}
+
+#four {
+grid-area: footer;
 }
