--- a/flexbox-practice/flexbox.css
+++ b/flexbox-practice/flexbox.css
@@ -1,38 +1,29 @@
 * {
-    box-sizing: border-box;
-}
-
-body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
+    padding: 0;
     margin: 0;
 }
 
-.main {
-    display: flex;
+main, header, section, aside, footer {
+    margin: 0;
+    padding: 20px;
+    border: 1px solid #000000;
+}
+
+#content {
     flex: 1;
 }
 
-.main > article {
-    flex: 1;
+#sidebar {
+    flex: 0 1 300px;
 }
 
-.main > nav, .main > aside {
-    flex: 0 0 20vw;
-    background: beige;
+.wrapper {
+    margin: auto;
+    max-width: 75rem;
 }
 
-.main > nav {
-    order: -1;
+@media screen and (min-width: 640px) {
+    .flex-container {
+        display: flex;
+    }
 }
-
-header, footer {
-    background: yellowgreen;
-    height: 10vh;
-}
-
-header, footer, article, nav, aside {
-    padding: 1em;
-}
-
